--- a/JS_Basic/index.html
+++ b/JS_Basic/index.html
@@ -9,8 +9,7 @@
         <h1>Section 2: JavaScript Language Basics</h1>
     </body>
     
-    <script>
-        console.log("Hello Shahid");
+    <script src = "script.js">
         //Press control Shift J to open console in browser
     </script>
 </html>
