--- a/AJAX_Demo/asynchronous.html
+++ b/AJAX_Demo/asynchronous.html
@@ -34,6 +34,12 @@ Date     : 16-May-2020
         Hey there
         The End
         Async Hey There
+
+
+        Asynchronous JS
+        1. Allow async functions to run in "background";
+        2.  We pass in callbacks that run once the fucntion has finished its work;
+        3.  Work on immediately : Non - blocking !
         */
     </script>
 </body>
