--- a/AJAX_Demo/asynchronous.html
+++ b/AJAX_Demo/asynchronous.html
@@ -18,7 +18,7 @@ Date     : 16-May-2020
 <body>
     <h1>Asynchronous JavaScript</h1>
     <script>
-        const second = () => {
+        /*         const second = () => {
             setTimeout(() => {
                 console.log("Async Hey There")
             }, 1000)
@@ -29,7 +29,7 @@ Date     : 16-May-2020
             console.log("The End");
         }
 
-        first();
+        first(); */
         /*
         Hey there
         The End
@@ -44,31 +44,31 @@ Date     : 16-May-2020
 
 
         //Old Way : Call Back Hell
-        function getRecipe() {
-            setTimeout(() => {
-                const recipeID = [523, 883, 432, 974];
-                console.log(recipeID);
+        /*         function getRecipe() {
+                    setTimeout(() => {
+                        const recipeID = [523, 883, 432, 974];
+                        console.log(recipeID);
 
-                setTimeout(id => {
-                    const recipe = {
-                        title: 'Fresh tomato pasta',
-                        publisher: 'Shahid'
-                    };
-                    console.log(`${id}: ${recipe.title}`);
+                        setTimeout(id => {
+                            const recipe = {
+                                title: 'Fresh tomato pasta',
+                                publisher: 'Shahid'
+                            };
+                            console.log(`${id}: ${recipe.title}`);
 
-                    setTimeout(publisher => {
-                        const recipe2 = {
-                            title: 'Italian Pizza',
-                            publisher: 'Shahid'
-                        };
-                        console.log(recipe2);
-                    }, 1500, recipe.publisher);
+                            setTimeout(publisher => {
+                                const recipe2 = {
+                                    title: 'Italian Pizza',
+                                    publisher: 'Shahid'
+                                };
+                                console.log(recipe2);
+                            }, 1500, recipe.publisher);
 
-                }, 1500, recipeID[2]);
+                        }, 1500, recipeID[2]);
 
-            }, 1500);
-        }
-        getRecipe();
+                    }, 1500);
+                }
+                getRecipe(); */
         /* 
                 [523, 883, 432, 974]
                 432: Fresh tomato pasta 
@@ -76,6 +76,72 @@ Date     : 16-May-2020
                     title: "Italian Pizza",
                     publisher: "Shahid"
                 } */
+
+        ////////////////////////
+        //Promises
+        /*
+        1. Object that keeps track about whether a certain event has happened already or not
+        2. Determines what happens after the event has happened
+        3. Implements the concept of a future value that we're expecting 
+        Every promise construcor has functions as args resolve and reject
+        resolve : success
+        reject : failure
+
+        we also 2 methods associate with Promise i.e then and catch if result is success then then is
+        executed else
+        if failure catch is executed;
+        */
+        const getIDs = new Promise((resolve, reject) => {
+            setTimeout(() => {
+                resolve([523, 883, 432, 974])
+            }, 1500);
+        });
+
+        const getRecipe = id => {
+            return new Promise((resolve, reject) => {
+                setTimeout((ID => {
+                    const recipe = {
+                        title: 'Fresh tomato pasta',
+                        publisher: 'Shahid'
+                    };
+                    resolve(`${ID}: ${recipe.title}`);
+                }), 1500, id);
+            });
+        };
+
+        const getRelated = publisher => {
+            return new Promise((resolve, reject) => {
+                setTimeout(pub => {
+                    const recipe2 = {
+                        title: 'Italian Pizza',
+                        publisher: 'Shahid'
+                    };
+                    resolve(`${pub} ${recipe2.title}`);
+                }, 1500, publisher);
+            });
+        };
+
+
+        getIDs
+            .then(ids => {
+                console.log(ids)
+                return getRecipe(ids[2]);
+            })
+            .then(recipe => {
+                console.log(recipe);
+                return getRelated('Shahid Dhariwala');
+            })
+            .then(rel =>
+            {
+                console.log(rel);
+            })
+            .catch(error => console.log("error"));
+
+            /*
+            [523, 883, 432, 974]
+            432: Fresh tomato pasta 
+            Shahid Dhariwala Italian Pizza
+            */
     </script>
 </body>
 
